2006-05-16  Patrick van Staveren  <trick@vanstaveren.us>
	* Various `make dist` and `make install` fixes - add
	resources and debug info where necessary.

2006-05-14  Lukas Lipka  <lukas@pmad.net>

	* plugins/Recommendation/RecommendationPlugin.cs: Hide the recommendation
	pane when the active source changes.

2006-05-11  Aaron Bockover  <aaron@abock.org>

	* configure.ac: If Banshee 0.11.x (plugin API v2) is detected, use gmcs
	since 0.11.x is now built with gmcs and uses .NET 2.0 libraries; 0.10.x
	compatible plugins will be built with mcs/.NET 1.0 if a 0.10.x Banshee
	is detected

2006-05-08  Aaron Bockover  <aaron@abock.org>

	* plugins/SmartPlaylists/QueryBuilderModel.cs: sqlite uses RANDOM instead
	of RAND; fixes 'Selected by Random' option

2006-05-08  Gabriel Burt  <gabriel.burt@gmail.com>

	* plugins/SmartPlaylists/SmartPlaylist.cs: Remove override from Delete
	method.

2006-05-08  Gabriel Burt  <gabriel.burt@gmail.com>

	* plugins/Podcast/UI/SyncPreferenceComboBox.cs.cs: Moved to
	SyncPreferenceComboBox.cs, and minor string fix.

2006-05-08  Gabriel Burt  <gabriel.burt@gmail.com>

	* plugins/SmartPlaylists/Plugin.cs: Listen for SourceManager and Library
	events prior to loading the smart playlists so that we add them to our
	internal list.  Remove smart playlists from the source list when the
	plugin is disabled.

	* plugins/SmartPlaylists/Editor.cs: Allow smart playlists to be renamed, again.

	* plugins/SmartPlaylists/SmartPlaylist.cs: Delay refreshing the current members unless the
	Library is loaded.  Fix some event triggers so that the track view is
	actually updated.

2006-05-08  Mike Urbanski  <michael.c.urbanski@gmail.com>

	* plugins/Podcast/DownloadCore/DownloadCore.cs: Fixed user event 
	icon strangeness.
	
	* plugins/Podcast/DownloadCore/DownloadTask.cs: *.tmp files are no 
	longer downloaded to the Library.

	* plugins/Podcast/DownloadCore/HttpDownloadTask.cs: Ranges are no 
	longer added to HTTP request headers unnecessarily. (BNC #341042)
